@@ -32,6 +32,7 @@ Changes in behaviour which may result in build errors
 
 All:
 
+- Add wxPowerResourceBlocker (Tobias Taschner).
 - Add wxApp::StoreCurrentException() and RethrowStoredException() and implement
   their functionality by default when using C++11 compiler.
 - Allow iterating over wxCmdLineParser arguments in order (Armel Asselin).
